--- a/BikeRental/src/views/addBike.fxml
+++ b/BikeRental/src/views/addBike.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: F2F1EF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuCtrl">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: F2F1EF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddBikeCtrl" >
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="0.0" prefWidth="0.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" prefWidth="550.0" />
@@ -50,12 +50,12 @@
                         <Insets left="10.0" />
                     </GridPane.margin>
                 </Label>
-                <TextField prefHeight="26.0" prefWidth="158.0" promptText="%make" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                <TextField fx:id="mMakeText" prefHeight="26.0" prefWidth="158.0" promptText="%make" GridPane.columnSpan="2" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets left="10.0" />
                     </GridPane.margin>
                 </TextField>
-                <TextField prefHeight="26.0" prefWidth="205.0" promptText="%VehicleSerialNum" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1">
+                <TextField fx:id="mSerialNumberText" prefHeight="26.0" prefWidth="205.0" promptText="%VehicleSerialNum" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
@@ -65,11 +65,6 @@
                         <Insets left="10.0" />
                     </GridPane.margin>
                 </Label>
-                <TextArea prefHeight="200.0" prefWidth="200.0" promptText="%modelNum" GridPane.columnSpan="2" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets left="10.0" />
-                    </GridPane.margin>
-                </TextArea>
                 <Label text="%VehicleLocation" GridPane.columnSpan="2" GridPane.rowIndex="4">
                     <GridPane.margin>
                         <Insets left="10.0" />
@@ -80,33 +75,28 @@
                         <Insets left="10.0" />
                     </GridPane.margin>
                 </Label>
-                <ComboBox prefHeight="26.0" prefWidth="309.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
+                <ComboBox fx:id="mVehicleColor" prefHeight="26.0" prefWidth="309.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets bottom="4.0" left="10.0" />
                     </GridPane.margin>
                 </ComboBox>
-                <TextArea prefHeight="30.0" prefWidth="528.0" GridPane.columnSpan="2" GridPane.rowIndex="7">
-                    <GridPane.margin>
-                        <Insets left="10.0" />
-                    </GridPane.margin>
-                </TextArea>
                 <Label text="%VehicleDescription" GridPane.rowIndex="6">
                     <GridPane.margin>
                         <Insets left="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Button mnemonicParsing="false" text="%back" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                <Button mnemonicParsing="false" onAction="#onBackClick" text="%back" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <Label text="Serial Number:" GridPane.columnIndex="2">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <TextField prefHeight="26.0" prefWidth="158.0" promptText="%description" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <TextField fx:id="mVehicleLocation" prefHeight="26.0" prefWidth="158.0" promptText="%location" GridPane.columnSpan="2" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </TextField>
-            <Label text="%VehiclePhysicalCondition" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Label text="%VehiclePhysicalCondition" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
@@ -116,17 +106,27 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <ComboBox prefHeight="26.0" prefWidth="257.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <ComboBox fx:id="mVehiclePhysicalCondition" prefHeight="26.0" prefWidth="257.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets bottom="4.0" left="10.0" />
                </GridPane.margin>
             </ComboBox>
-            <Button mnemonicParsing="false" text="%submit" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
-            <ComboBox prefHeight="26.0" prefWidth="260.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="7">
+            <Button mnemonicParsing="false" onAction="#onSubmitClick" text="%submit" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+            <ComboBox fx:id="mVehicleStatus" prefHeight="26.0" prefWidth="260.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets bottom="4.0" left="10.0" />
                </GridPane.margin>
             </ComboBox>
+            <TextField fx:id="mVehicleDescription" promptText="%description" GridPane.columnSpan="2" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </TextField>
+            <TextField promptText="%modelNum" fx:id="mVehicleModelNum" GridPane.columnSpan="2" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </TextField>
             </children>
         </GridPane>
         <Label text="%brockportTitle" GridPane.columnIndex="1" GridPane.halignment="CENTER">
