--- a/BikeRental/src/views/addUser.fxml
+++ b/BikeRental/src/views/addUser.fxml
@@ -12,17 +12,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: F2F1EF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuCtrl">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: F2F1EF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddUser">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="0.0" prefWidth="0.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" prefWidth="550.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="0.0" prefWidth="0.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="360.0" minHeight="10.0" prefHeight="292.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="351.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="360.0" minHeight="10.0" prefHeight="306.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="351.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <GridPane hgap="10.0" style="-fx-border-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -35,15 +35,16 @@
             <ColumnConstraints />
             </columnConstraints>
             <rowConstraints>
-            <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="75.0" minHeight="4.0" prefHeight="41.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="146.0" minHeight="0.0" prefHeight="33.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="75.0" minHeight="4.0" prefHeight="33.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="146.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
             <Label text="%name">
@@ -51,12 +52,12 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField prefHeight="26.0" prefWidth="205.0" promptText="%firstName" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <TextField fx:id="mFirstName" prefHeight="26.0" prefWidth="205.0" promptText="%firstName" GridPane.columnSpan="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField prefHeight="26.0" prefWidth="205.0" promptText="%lastName" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <TextField fx:id="mLastName" prefHeight="26.0" prefWidth="205.0" promptText="%lastName" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -66,23 +67,23 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextArea prefHeight="200.0" prefWidth="200.0" promptText="%country" GridPane.rowIndex="3">
+            <TextField fx:id="mCountryCode" prefHeight="200.0" prefWidth="200.0" promptText="%country" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
-            </TextArea>
-            <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            </TextField>
+            <TextField fx:id="mPhoneNumber" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
             <Label text="%membershipExpire" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <DatePicker prefHeight="26.0" prefWidth="229.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4">
+            <DatePicker fx:id="mMembershipExpireDate" prefHeight="26.0" prefWidth="229.0" promptText="Membership" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </DatePicker>
-            <DatePicker prefHeight="26.0" prefWidth="279.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <DatePicker fx:id="mInitialRegistrationDate" prefHeight="26.0" prefWidth="279.0" promptText="Registration" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -100,23 +101,46 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <ComboBox prefHeight="26.0" prefWidth="248.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3">
+            <ComboBox fx:id="mStatus" prefHeight="26.0" prefWidth="248.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="4.0" left="10.0" />
                </GridPane.margin>
             </ComboBox>
-            <TextArea prefHeight="30.0" prefWidth="528.0" GridPane.columnSpan="6" GridPane.rowIndex="7">
+            <TextArea fx:id="mNotes" prefHeight="43.0" prefWidth="246.0" promptText="%notes" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="7">
                <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets bottom="5.0" left="10.0" top="5.0" />
                </GridPane.margin>
             </TextArea>
-            <Label text="%notes" GridPane.rowIndex="6">
+            <Label text="%email" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Button mnemonicParsing="false" text="%back" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Button mnemonicParsing="false" text="%submit" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+            <Button mnemonicParsing="false" onAction="#onBackClick" text="%back" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Button mnemonicParsing="false" onAction="#onSubmitClick" text="%submit" GridPane.columnIndex="3" GridPane.rowIndex="9">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Button>
+            <TextField fx:id="mEmail" promptText="%email" GridPane.columnSpan="3" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </TextField>
+            <Label text="Notes" GridPane.columnIndex="3" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label text="%userType" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <ComboBox fx:id="mUserType" prefHeight="26.0" prefWidth="248.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </ComboBox>
          </children>
         </GridPane>
         <Label text="%brockportTitle" GridPane.columnIndex="1" GridPane.halignment="CENTER">
