fix some graphics and internationalization bugs

--- a/BikeRental/src/views/addUser.fxml
+++ b/BikeRental/src/views/addUser.fxml
@@ -38,8 +38,8 @@
             <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="75.0" minHeight="4.0" prefHeight="33.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="146.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="146.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
@@ -78,12 +78,12 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <DatePicker fx:id="mMembershipExpireDate" prefHeight="26.0" prefWidth="229.0" promptText="Membership" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4">
+            <DatePicker fx:id="mMembershipExpireDate" prefHeight="26.0" prefWidth="229.0" promptText="%membership" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </DatePicker>
-            <DatePicker fx:id="mInitialRegistrationDate" prefHeight="26.0" prefWidth="279.0" promptText="Registration" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <DatePicker fx:id="mInitialRegistrationDate" prefHeight="26.0" prefWidth="279.0" promptText="%registration" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -103,7 +103,7 @@
             </Label>
             <ComboBox fx:id="mStatus" prefHeight="26.0" prefWidth="248.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets bottom="4.0" left="10.0" />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </ComboBox>
             <TextArea fx:id="mNotes" prefHeight="43.0" prefWidth="246.0" promptText="%notes" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="7">
@@ -131,7 +131,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="%userType" GridPane.rowIndex="8">
+            <Label text="%userType" GridPane.columnSpan="2" GridPane.rowIndex="8">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
