--- a/BikeRental/src/views/Login.fxml
+++ b/BikeRental/src/views/Login.fxml
@@ -29,7 +29,7 @@
                 <Font name="Helvetica Neue" size="16.0" />
             </font>
         </Label>
-        <TextField fx:id="mBannerIdText" text="%userId" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="mBannerIdText" promptText="%userId" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <PasswordField fx:id="mPasswordField" promptText="%password" text="" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Button fx:id="mLoginBtn" mnemonicParsing="false" onAction="#loginHit" text="%login" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
     </children>
