--- a/BikeRental/src/views/addWorker.fxml
+++ b/BikeRental/src/views/addWorker.fxml
@@ -138,13 +138,13 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="mPhoneNumber" promptText="\%phoneNumber" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-            <Label text="%workerId">
+            <TextField fx:id="mPhoneNumber" promptText="%phoneNumber" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+            <Label text="%workerId" GridPane.columnSpan="2">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="mWorkerId" promptText="\%workerId" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <TextField fx:id="mWorkerId" promptText="%workerId" GridPane.columnSpan="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" top="5.0" />
                </GridPane.margin>
