--- a/BikeRental/src/views/addUser.fxml
+++ b/BikeRental/src/views/addUser.fxml
@@ -41,12 +41,17 @@
             <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="146.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
+            <Label prefHeight="16.0" prefWidth="100.0" text="+" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
             <Label text="%name">
                <GridPane.margin>
                   <Insets left="10.0" />
@@ -69,10 +74,10 @@
             </Label>
             <TextField fx:id="mCountryCode" prefHeight="200.0" prefWidth="200.0" promptText="%country" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="mPhoneNumber" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <TextField fx:id="mPhoneNumber" prefHeight="200.0" prefWidth="200.0" promptText="%phoneNumber" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
             <Label text="%membershipExpire" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
@@ -106,12 +111,12 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </ComboBox>
-            <TextArea fx:id="mNotes" prefHeight="43.0" prefWidth="246.0" promptText="%notes" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="7">
+            <TextArea fx:id="mNotes" prefHeight="43.0" prefWidth="246.0" promptText="%notes" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="8">
                <GridPane.margin>
                   <Insets bottom="5.0" left="10.0" top="5.0" />
                </GridPane.margin>
             </TextArea>
-            <Label text="%email" GridPane.rowIndex="6">
+            <Label text="%email" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
@@ -121,22 +126,22 @@
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin></Button>
-            <TextField fx:id="mEmail" promptText="%email" GridPane.columnSpan="3" GridPane.rowIndex="7">
+            <TextField fx:id="mEmail" promptText="%email" GridPane.columnSpan="3" GridPane.rowIndex="8">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </TextField>
-            <Label text="Notes" GridPane.columnIndex="3" GridPane.rowIndex="6">
+            <Label text="Notes" GridPane.columnIndex="3" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="%userType" GridPane.columnSpan="2" GridPane.rowIndex="8">
+            <Label text="%userType" GridPane.columnSpan="2" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <ComboBox fx:id="mUserType" prefHeight="26.0" prefWidth="248.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="8">
+            <ComboBox fx:id="mUserType" prefHeight="26.0" prefWidth="248.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
