--- a/BikeRental/src/views/addWorker.fxml
+++ b/BikeRental/src/views/addWorker.fxml
@@ -48,6 +48,7 @@
             <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
+            <Label prefHeight="16.0" prefWidth="87.0" text="+" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
                 <Label text="%name" GridPane.rowIndex="2">
                     <GridPane.margin>
                         <Insets left="10.0" />
@@ -56,6 +57,9 @@
                     <GridPane.margin>
                         <Insets left="10.0" />
                     </GridPane.margin>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
                 </TextField>
                 <TextField fx:id="mLastName" prefHeight="26.0" prefWidth="205.0" promptText="%lastName" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
                     <GridPane.margin>
@@ -134,7 +138,7 @@
             </ComboBox>
             <TextField fx:id="mCountryCode" promptText="%country" GridPane.rowIndex="5">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="25.0" />
                </GridPane.margin>
             </TextField>
             <TextField fx:id="mPhoneNumber" promptText="%phoneNumber" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
