--- a/BikeRental/src/views/menu.fxml
+++ b/BikeRental/src/views/menu.fxml
@@ -18,12 +18,13 @@
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="0.0" prefWidth="0.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="360.0" minHeight="10.0" prefHeight="329.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="360.0" minHeight="10.0" prefHeight="270.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="351.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane prefHeight="356.0" prefWidth="600.0" style="-fx-border-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <GridPane prefHeight="356.0" prefWidth="600.0" style="-fx-border-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="121.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="133.0" />
@@ -77,6 +78,11 @@
       <Label text="The College At Brockport Bike Rental" GridPane.columnIndex="1" GridPane.halignment="CENTER">
          <font>
             <Font name="Helvetica Neue Light" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="mSubtitle" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+         <font>
+            <Font name="Helvetica Neue Light" size="14.0" />
          </font>
       </Label>
    </children>
